# marksentry

./: .gitignore  MarkSentry_IEEE_Paper.docx  README.md  generate_paper.py  pyproject.toml  setup.py
docs/: index.html
marksentry/: __init__.py  main.py
marksentry/core/: __init__.py  layout.py  pii_filter.py  sanitizer.py
marksentry/parsers/: __init__.py  base.py  docx_parser.py  pdf_parser.py  zip_parser.py
marksentry/utils/: __init__.py  math_converter.py
tests/: test_layout.py  test_sanitizer.py
